--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework~=3.12.4
 django~=3.2.11
 psycopg2~=2.9.1
 Pillow~=9.0.0
+django-cors-headers~=3.11.0
 
 # Development Only
 pytest~=6.2.5
